# financial_sala_2

./: README.md
.github/workflows/: pipeline.yaml
cpp-engine/: CMakeLists.txt
cpp-engine/include/: TransactionProcessor.h
cpp-engine/src/: TransactionProcessor.cpp  main.cpp
cpp-engine/tests/: test_processor.cpp
data/: expected_report.json  transactions.csv
docs/: implementation_details.md
python-validator/: validate.py
python-validator/tests/: test_validate.py
